# DatasetDoctor

./: .gitignore  README.md  app.py  cli.py  main.py  pyproject.toml  requirements.txt
datasetdoctor/admincp/: audit_engine.py
datasetdoctor/analysis/: analyzer.py  cleaning.py  engine.py  inspect.py  inspector.py  profiler.py
datasetdoctor/analysis/cleaning_plugins/: __init__.py  base.py  drop_columns.py  executor.py  registry.py  remove_duplicates.py  smart_casting.py  smart_imputation.py
datasetdoctor/analysis/plugins/: __init__.py  auto_feature_selection.py  base.py  clean_duplicate.py  data_leakage.py  data_quality.py  executor.py  imbalance.py  ml_readiness.py  (+5 more)
datasetdoctor/api/: api_routes.py  background.py  background_clean.py  helpers.py  main.py  routers.py  routes.py  run_background_clean.py  schemas.py
datasetdoctor/core/: audit.py  config.py  lifespan.py  logger.py  utils.py
datasetdoctor/storage/: base.py  factory.py  local.py
static/: dashboard.js  loader.js  main.js  styles.css  timeTicker.js  uploader.css
static/css/: custom_dialog.css  insights.css  land_page.css  preview.css  style.css  styles.css  test.css  uploader.css
static/js/: api.js  clean.js  data_preview.js  main.js  refinement.js  uploader.js
static/ui/: actions.js  charts.js  controller.js  state.js  table.js  ui.js
templates/: about.html  audit.html  clean.html  dashboard.html  data_preview.html  detail.html  index.html  insights.html  session_expired.html  upload.html
templates/includes/: footer.html  index_nav.html  navbar.html  sidebar.html  sticky_footer.html
(+24 files in other folders)
